--- a/CSS/bottom-baner.css
+++ b/CSS/bottom-baner.css
@@ -1,16 +1,18 @@
 .bottom-baner {
-  width: 800px;
-  height: 50px;
-
-  margin: 0 auto;
-  margin-top: 75px;
+  width: 100%;
 
   padding: 23px;
+
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 0 13px;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+  text-align: center;
 
   background: #ffffff;
   box-shadow: 0px 13.8611px 55.4444px #f2f5fa;
@@ -19,10 +21,13 @@
 
 .bottom-baner .example-text {
   color: #73738d;
+  text-align: center;
+
+  padding-top: 4px;
 }
 
 .bottom-baner__button {
-  width: 155.94px;
+  width: 20%;
   height: 32.3px;
   border-radius: 33.9597px;
   background: #26c296;
@@ -32,4 +37,27 @@
   font-weight: 600;
   font-size: 11.0889px;
   line-height: 13px;
+}
+
+.bottom-baner__text {
+  padding: 5px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-baner {
+    width: 95%;
+    padding: 0;
+  }
+  .bottom-baner__text {
+    width: 70%;
+  }
+
+  .bottom-baner__button {
+    width: 30%;
+  }
+
+  .bottom-baner__title {
+    font-size: 20px;
+    line-height: 120%;
+  }
 }
