--- a/CSS/convenience.css
+++ b/CSS/convenience.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-evenly;
 
-  width: 340px;
+  width: 45%;
   height: 159px;
 
   padding-left: 13px;
@@ -14,6 +14,12 @@
   border-radius: 20.7917px;
 }
 
+@media screen and (max-width: 768px) {
+  .convenience__example {
+    width: 95%;
+  }
+}
+
 .convenience__message {
   display: flex;
   flex-direction: row;
@@ -21,7 +27,6 @@
 }
 
 .convenience__message-text {
-  width: 307.17px;
   height: 58.76px;
 
   font-family: Gilroy;
@@ -32,8 +37,15 @@
 }
 
 .convenience__about-info {
-  width: 340px;
+  width: 45%;
   min-height: 90px;
 
   padding-top: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .convenience__about-info {
+    width: 100%;
+    text-align: center;
+  }
 }
