--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,4 +1,5 @@
 footer {
+  width: 100%;
   height: 45px;
 
   display: flex;
@@ -6,7 +7,7 @@ footer {
   justify-content: space-between;
   text-align: center;
 
-  margin: 40px;
+  margin: 20px 0;
 }
 
 .footer__copyright {
