--- a/CSS/hero.css
+++ b/CSS/hero.css
@@ -1,13 +1,32 @@
 .hero__inner {
   display: flex;
-  justify-content: space-evenly;
-  margin-left: 105px;
-  margin-right: 200px;
+  justify-content: space-between;
+  width: 65%;
+  margin: auto;
   margin-top: 65px;
+}
+@media screen and (max-width: 768px) {
+  .hero__inner {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .hero__description {
-  width: 430px;
+  width: 60%;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .hero__description {
+    width: 100%;
+  }
+
+  .hero__description p {
+    height: 100px;
+  }
 }
 
 .hero__title {
@@ -16,6 +35,12 @@
   color: #222222;
   height: 97.03px;
   padding-top: 78px;
+}
+@media screen and (max-width: 768px) {
+  .hero__title {
+    padding: 0;
+    height: auto;
+  }
 }
 
 .hero__email-id {
@@ -38,7 +63,7 @@
 }
 
 .hero__button {
-  width: 155.94px;
+  width: 35%;
   height: 41.58px;
 
   border-radius: 33.9597px;
@@ -61,7 +86,25 @@
   height: 450px;
   filter: drop-shadow(0px 6.48945px 25.9578px #f2f5fa);
 }
+@media screen and (max-width: 768px) {
+  .hero__image {
+    background: none;
+  }
+}
 .hero__phone {
   width: 240px;
   height: 458.74px;
+}
+@media screen and (max-width: 768px) {
+  .hero__phone {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__inner {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0px;
+  }
 }
