--- a/CSS/reminder.css
+++ b/CSS/reminder.css
@@ -2,12 +2,26 @@
   margin-top: 115px;
 }
 
+@media screen and (max-width: 768px) {
+  .reminder {
+    margin-top: 50px;
+  }
+}
+.reminder__notifications {
+  width: 45%;
+}
+@media screen and (max-width: 768px) {
+  .reminder__notifications {
+    width: 100%;
+  }
+}
+
 .reminder__notification-example {
   display: flex;
   align-items: center;
   justify-content: space-around;
 
-  width: 379.79px;
+  width: 100%;
   height: 66.53px;
 
   background: #ffffff;
@@ -18,7 +32,7 @@
 }
 
 .reminder__notification-example p {
-  width: 300.79px;
+  width: 60%;
   height: 33.96px;
 }
 
@@ -30,7 +44,16 @@
   height: 33.27px;
 }
 
+.about-reminder {
+  width: 45%;
+}
+
+@media screen and (max-width: 768px) {
+  .about-reminder {
+    width: 100%;
+    text-align: center;
+  }
+}
 .about-reminder p.paragraph {
-  width: 343.06px;
   height: 88.71px;
 }
